chore: Restored presentationFrom method to use pex
